syntax = "proto3";

package calculator;

option go_package = "/proto/gen;mainpb";

service Calculator {
    rpc Add (AddRequest) returns (AddResponse);  // Unary RPC
    rpc GenerateFibonacci (FibonacciRequest) returns (stream FibonacciResponse); // Server side stream
    rpc SendNumbers (stream NumberRequest) returns (NumberResponse);  // Client side stream
    rpc Chat (stream ChatMessage) returns (stream ChatMessage);     // Bi-Directional stream
}

message ChatMessage {
    string message = 1;
}

message NumberRequest{
    int32 number = 1;
}

message NumberResponse {
    int32 sum = 1;
}

message AddRequest {
    int32 a = 1;
    int32 b = 2;
}

message AddResponse {
    int32 sum = 1;
}

message FibonacciRequest {
    int32 n = 1; // Number of fibonacci numbers to generate
}

message FibonacciResponse {
    int32 number = 1;   // Individual Fibonacci number
}